# clawcu

./: .gitignore  0.3.x-check-codex.md  0.3.x-check-codex.zh-CN.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  RELEASE_v0.1.0.zh-CN.md  RELEASE_v0.2.0.md  RELEASE_v0.2.0.zh-CN.md  SECURITY.md  USAGE_v0.2.0.md  USAGE_v0.2.0.zh-CN.md  a2a-async-plan.md  a2a-design-review-1.md  a2a-design-review-2.md  a2a-design-review-3.md  a2a-design-review-4.md  a2a-example.md  a2a-vip-example.md  product.md  pyproject.toml  tasks.md
.github/workflows/: ci.yml
docs/: a2a-envs.md  a2a-gateway.md  a2a-protocol.md  a2a-protocol.zh-CN.md  a2a-sidecar.md  a2a-sidecar.zh-CN.md
release/: RELEASE_latest.md  RELEASE_latest.zh-CN.md  RELEASE_v0.1.0.md  RELEASE_v0.2.0.md  RELEASE_v0.2.10.md  RELEASE_v0.2.10.zh-CN.md  RELEASE_v0.2.11.md  RELEASE_v0.2.11.zh-CN.md  RELEASE_v0.2.12.md  RELEASE_v0.2.12.zh-CN.md  RELEASE_v0.2.8.md  RELEASE_v0.2.8.zh-CN.md  RELEASE_v0.2.9.md  RELEASE_v0.2.9.zh-CN.md  RELEASE_v0.3.0.md  RELEASE_v0.3.0.zh-CN.md  RELEASE_v0.4.1.md  RELEASE_v0.4.1.zh-CN.md  RELEASE_v0.5.1.md  RELEASE_v0.5.1.zh-CN.md  USAGE_latest.md  USAGE_latest.zh-CN.md  USAGE_v0.1.0.md  USAGE_v0.1.0.zh-CN.md  USAGE_v0.2.0.md  USAGE_v0.2.10.md  USAGE_v0.2.10.zh-CN.md  USAGE_v0.2.11.md  USAGE_v0.2.11.zh-CN.md  USAGE_v0.2.12.md  USAGE_v0.2.12.zh-CN.md  USAGE_v0.2.8.md  USAGE_v0.2.8.zh-CN.md  USAGE_v0.2.9.md  USAGE_v0.2.9.zh-CN.md  USAGE_v0.3.0.md  USAGE_v0.3.0.zh-CN.md
src/clawcu/: __init__.py  __main__.py  cli.py  docker.py  models.py  openclaw.py  (+5 more)
tests/: conftest.py  sidecar_bootstrap.test.js  sidecar_logsink.test.js  sidecar_mcp.test.js  sidecar_mcp_e2e.test.js  sidecar_outbound.test.js  sidecar_outbound_limit.test.js  sidecar_outbound_size_cap.test.js  sidecar_outbound_ssrf.test.js  sidecar_peer_cache.test.js  sidecar_ratelimit.test.js  sidecar_readiness.test.js  sidecar_readjsonbody_destroy.test.js  sidecar_server_module_load.test.js  sidecar_thread.test.js  support.py  test_a2a.py  test_cli.py  test_dashboard.py  test_hermes.py  test_llm.py  test_openclaw.py  test_provider_canonical.py  test_registry.py  test_service.py  test_sidecar_bootstrap.py  test_sidecar_chat_streaming.py  test_sidecar_hermes_async.py  test_sidecar_logsink.py  test_sidecar_mcp.py  test_sidecar_mcp_e2e.py  test_sidecar_outbound.py  test_sidecar_outbound_limit.py  test_sidecar_outbound_size_cap.py  test_sidecar_outbound_ssrf.py  test_sidecar_peer_cache.py  test_sidecar_ratelimit.py  test_sidecar_readiness.py  test_sidecar_readjsonbody_destroy.py  test_sidecar_server_module_load.py  (+6 more)
(+114 files in other folders)
